--- a/src/components/ModalVideo/Video/Video.scss
+++ b/src/components/ModalVideo/Video/Video.scss
@@ -2,8 +2,8 @@
   .video {
     padding-right: 0px;
     .OTPublisherContainer {
-      width: 100% !important;
-      height: 24rem !important;
+      // width: 100% !important;
+      // height: 24rem !important;
     }
     .modal-footer {
       justify-content: center;
