--- a/src/components/ModalVideo/Video/Video.scss
+++ b/src/components/ModalVideo/Video/Video.scss
@@ -1,10 +1,6 @@
 .modal {
   .video {
     padding-right: 0px;
-    .OTPublisherContainer {
-      // width: 100% !important;
-      // height: 24rem !important;
-    }
     .modal-footer {
       justify-content: center;
     }
@@ -12,4 +8,24 @@
   .chat {
     padding: 0px;
   }
+}
+
+.connectionStatus {
+  padding-top: 20px;
+  margin-left: 5%;
+  font-size: 1.5em;
+}
+.subscriber {
+  margin-left: 10%;
+}
+.publisher {
+  float: right;
+  margin-right: 10%;
+}
+.OTPublisherContainer {
+  width: 80vh !important;
+  height: 80vh !important;
+}
+#error {
+  color: red;
 }
