--- a/src/components/ModalVideo/Video/Video.scss
+++ b/src/components/ModalVideo/Video/Video.scss
@@ -1,8 +1,70 @@
 .modal {
   .video {
-    padding-right: 0px;
-    .modal-footer {
+    justify-content: center;
+    .publisher {
+      text-align: center;
+      .OTPublisherContainer {
+        width: 20rem !important;
+        height: 20rem !important;
+        margin: auto;
+      }
+    }
+    .subscriber {
+      text-align: center;
+
+      .OTSubscriberContainer {
+        width: 20rem !important;
+        height: 20rem !important;
+        margin: auto;
+      }
+    }
+    .controls {
+      display: flex;
       justify-content: center;
+      button {
+        border-radius: 25px;
+        transition: 0.2s;
+        width: 50px;
+        height: 50px;
+        margin-top: 10px;
+        svg {
+          transform: rotate(224deg);
+        }
+
+        &:hover {
+          transform: translateY(-5px);
+        }
+      }
+      .controlsBtn {
+        margin: 10px;
+        background-color: #efefef;
+        border-radius: 25px;
+        transition: 0.2s;
+        &:hover {
+          background-color: #dad7d7;
+          transform: translateY(-5px);
+        }
+        label {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          margin: 0px;
+          width: 50px;
+          height: 50px;
+          span {
+            font-size: 20px;
+            text-align: center;
+          }
+          input {
+            position: absolute;
+            top: -20rem;
+            opacity: 0;
+            &:checked + span {
+              color: #48bf84;
+            }
+          }
+        }
+      }
     }
   }
   .chat {
@@ -15,17 +77,7 @@
   margin-left: 5%;
   font-size: 1.5em;
 }
-.subscriber {
-  margin-left: 10%;
-}
-.publisher {
-  float: right;
-  margin-right: 10%;
-}
-.OTPublisherContainer {
-  width: 80vh !important;
-  height: 80vh !important;
-}
+
 #error {
   color: red;
 }
