--- a/src/components/ModalVideo/Video/Video.scss
+++ b/src/components/ModalVideo/Video/Video.scss
@@ -4,20 +4,20 @@
     .publisher {
       text-align: center;
       .OTPublisherContainer {
-        width: 20rem !important;
-        height: 20rem !important;
-        margin: auto;
+        // width: 20rem !important;
+        // height: 20rem !important;
+        // margin: auto;
       }
     }
-    .subscriber {
-      text-align: center;
+    // .subscriber {
+    //   text-align: center;
 
-      .OTSubscriberContainer {
-        width: 20rem !important;
-        height: 20rem !important;
-        margin: auto;
-      }
-    }
+    //   .OTSubscriberContainer {
+    //     width: 20rem !important;
+    //     height: 20rem !important;
+    //     margin: auto;
+    //   }
+    // }
     .controls {
       display: flex;
       justify-content: center;
