--- a/src/components/ModalVideo/Video/Video.scss
+++ b/src/components/ModalVideo/Video/Video.scss
@@ -1,9 +1,24 @@
 .modal {
   .video {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
+    padding: 0px;
     .publisher {
       text-align: center;
+
+      // &:nth-child(1) div:nth-child(2) div:nth-child(n) {
+      //   display: flex;
+      //   // opacity: 0.5;
+      //   // div:nth-child(n) {
+      //   //   display: block;
+      //   //   min-width: 50%;
+      //   // }
+      // }
+
       .OTPublisherContainer {
+        // width: 100% !important;
+        // height: 20rem !important;
         .OT_name {
           margin-left: 24px;
           display: flex;
@@ -14,16 +29,20 @@
         // margin: auto;
       }
     }
-    // .subscriber {
-    //   text-align: center;
 
-    //   .OTSubscriberContainer {
-    //     width: 20rem !important;
-    //     height: 20rem !important;
-    //     margin: auto;
-    //   }
-    // }
+    .publisher > div:nth-child(2) {
+      // opacity: 0.5;
+      display: flex;
+    }
+
+    .publisher > div:nth-child(2) > div {
+      // display: block;
+      // opacity: 0.5;
+      width: 100%;
+      min-width: 25%;
+    }
     .controls {
+      margin-top: auto;
       display: flex;
       justify-content: center;
       button {
