Big updates in front

--- a/src/components/ChatRooms/CreateRoomModal/CreateRoomModal.scss
+++ b/src/components/ChatRooms/CreateRoomModal/CreateRoomModal.scss
@@ -3,6 +3,9 @@
   .modal-content {
     border: none;
     border-radius: 2rem;
+    -webkit-box-shadow: 10px 10px 3px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 10px 10px 3px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 10px 10px 3px 0px rgba(0, 0, 0, 0.75);
     .row {
       margin: 0px;
       .info {
