--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -23,7 +23,7 @@ footer {
   .creds {
     padding-top: 1rem;
     color: rgba(255, 255, 255, 0.5);
-
+    text-align: center;
     p {
       transition: 0.3s;
       &:hover {
