--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
   margin-bottom: 3rem;
 
   .lead {
-    margin: 1rem 10rem;
+    // margin: 1rem 10rem;
   }
   .card {
     height: fit-content;
@@ -11,7 +11,7 @@
     border-radius: 2rem;
     margin: 10px;
     min-width: 23% !important;
-    max-width: 23% !important;
+    // max-width: 23% !important;
     box-shadow: 0.5rem 0.5rem 0 rgba(233, 236, 239, 0.5);
     padding-top: 20px;
     transition: 0.3s;
