--- a/src/components/ChatRooms/CreateRoomModal/CreateRoomModal.scss
+++ b/src/components/ChatRooms/CreateRoomModal/CreateRoomModal.scss
@@ -1,3 +1,5 @@
+$breakpoint-tablet: 768px;
+
 #CreateRoomModal {
   margin-top: 10%;
   .modal-content {
@@ -10,7 +12,15 @@
       margin: 0px;
       .info {
         background-color: #48bf84;
-        border-radius: 2rem 0 0 2rem;
+        border-radius: 2rem 2rem 0 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        color: #fff;
+        text-align: center;
+        padding: 20px;
+
         .participant {
           width: 50px;
           height: 50px;
@@ -19,35 +29,28 @@
           background-size: cover;
           border-radius: 100%;
           margin: 2px;
-          margin-top: 25%;
           &:hover {
             box-shadow: 0 0 0 2pt #48bf84;
-            // border: 3px solid #48bf84;
+            border: 3px solid #48bf84;
             cursor: pointer;
           }
         }
-        .row {
-          text-align: center;
-          color: #fff;
-          justify-content: center;
-          h4 {
-            margin-top: 6px;
-            font-size: 20px;
+        p {
+          margin: 0px 30px;
+          a {
+            color: #fff;
+            text-decoration: none;
             font-weight: 600;
-          }
-          p {
-            font-size: 13px;
-            font-weight: 100;
-            a {
-              color: #fff;
-              text-decoration: none;
-              font-weight: 600;
+            &:hover {
+              font-weight: 700;
             }
           }
         }
       }
       .modal-header {
         justify-content: center;
+        border: none;
+        padding-bottom: 0px;
       }
       .modal-body {
         padding-left: 15px;
@@ -84,6 +87,31 @@
           }
           small {
             color: #ff5a6a;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: $breakpoint-tablet) {
+  #CreateRoomModal {
+    .modal-content {
+      .info {
+        // border: 3px solid #48bf84;
+        border-radius: 2rem 0 0 2rem !important;
+
+        p {
+          font-size: 12px;
+          margin: 0px !important;
+          padding: 0px !important;
+          a {
+            // color: #fff;
+            // text-decoration: none;
+            // font-weight: 600;
+            &:hover {
+              font-weight: 700 !important;
+            }
           }
         }
       }
